Implement Student findAll and findById
